# IR-API

./: .dockerignore  .gitignore  .pylintrc  README.md  codecov.yml  mypy.ini  pyproject.toml
.github/workflows/: codeql.yml  formatting.yml  image-scan.yml  linting.yml  scorecards.yml  tests.yml
container/: ir_api.D
ir_api/: exception_handlers.py  ir_api.py  router.py
ir_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ir_api/core/: base.py  exceptions.py  model.py  repositories.py  responses.py  utility.py
ir_api/core/services/: reduction.py  run.py
ir_api/core/specifications/: base.py  reduction.py  run.py
ir_api/scripts/: acquisition.py  pre_script.py  script.py
ir_api/scripts/transforms/: factory.py  mantid_transform.py  mari_transforms.py  osiris_transform.py  test_transforms.py  tosca_transform.py  transform.py
test/: test_acquisition.py  test_e2e.py  utils.py
test/core/: test_repositories_integration.py  test_responses.py  test_utility.py
test/core/services/: test_reduction.py  test_run.py
test/e2e/: conftest.py  test_core.py  test_scripts.py
test/scripts/: test_acquisition.py
test/scripts/transforms/: test_factory.py  test_mantid_transform.py  test_mari_transforms.py  test_osiris_transform.py  test_tosca_transform.py
utils/: db_generator.py
