[project]
name = "ir-api"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "fastapi[all]==0.104.1",
    "psycopg2==2.9.9",
    "SQLAlchemy==2.0.23",
    "pydantic==2.6.1",
    "uvicorn==0.24.0.post1",
    "requests==2.31.0"
]

[project.urls]
"Repository" = "https://github.com/interactivereduction/ir-api"

[project.optional-dependencies]
formatting = [
    "black==23.12.1"
]

test = [
    "pytest==7.4.4",
    "requests==2.31.0",
    "httpx==0.25.2",
    "pytest-cov==4.1.0",
    "pytest-random-order==1.1.0",
    "Faker==19.13.0"

]

code-inspection = [
    "pylint==3.0.3",
    "mypy==1.7.1",
    "ir-api[test]",
    "types-requests==2.31.0.10",
    "types-urllib3==1.26.25.14"
]

dev = [
    "ir-api[code-inspection]",
    "ir-api[formatting]",
]


[tool.setuptools]
packages = ["ir_api"]