[project]
name = "ir-api"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "fastapi[all]==0.110.0",
    "psycopg2==2.9.9",
    "SQLAlchemy==2.0.28",
    "pydantic==2.6.3",
    "uvicorn==0.28.0",
    "requests==2.31.0"
]

[project.urls]
"Repository" = "https://github.com/interactivereduction/ir-api"

[project.optional-dependencies]
formatting = [
    "black==24.2.0"
]

test = [
    "pytest==8.1.1",
    "requests==2.31.0",
    "httpx==0.27.0",
    "pytest-cov==4.1.0",
    "pytest-random-order==1.1.1",
    "Faker==24.1.0"

]

code-inspection = [
    "pylint==3.1.0",
    "mypy==1.9.0",
    "ir-api[test]",
    "types-requests==2.31.0.20240311",
    "types-urllib3==1.26.25.14"
]

dev = [
    "ir-api[code-inspection]",
    "ir-api[formatting]",
]


[tool.setuptools]
packages = ["ir_api"]